--- a/index.html
+++ b/index.html
@@ -2,99 +2,125 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Onchain Calculator</title>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>On-Chain Calculator</title>
   <style>
     body {
-      background: #121212;
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background: #000;
       color: #fff;
-      font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
     }
     .calculator {
-      background: #1e1e1e;
+      background: rgba(20, 20, 20, 0.9);
       padding: 20px;
       border-radius: 20px;
-      box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
-      width: 350px;
-      text-align: center;
+      box-shadow: 0 0 25px rgba(0, 255, 150, 0.5);
+      width: 320px;
+      max-width: 90vw;
     }
-    h1 {
-      margin-bottom: 15px;
-      font-size: 22px;
-      color: #00ffcc;
-    }
-    input {
-      width: 80%;
-      padding: 10px;
-      margin: 10px 0;
+    .display {
+      background: rgba(0,0,0,0.6);
+      color: #0f0;
+      font-size: 2em;
+      text-align: right;
+      padding: 15px;
       border-radius: 10px;
-      border: none;
-      outline: none;
-      font-size: 16px;
+      margin-bottom: 15px;
+      overflow-x: auto;
+    }
+    .buttons {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
     }
     button {
-      width: 70px;
-      height: 50px;
-      margin: 5px;
-      font-size: 18px;
+      font-size: 1.5em;
+      font-weight: bold;
+      padding: 20px;
       border: none;
       border-radius: 12px;
       cursor: pointer;
-      background: #00ffcc;
-      color: #121212;
-      transition: background 0.2s;
+      background: rgba(40,40,40,0.8);
+      color: #fff;
+      transition: all 0.2s;
     }
     button:hover {
-      background: #00ccaa;
+      background: rgba(0,255,150,0.3);
+      box-shadow: 0 0 10px #0f0;
     }
-    #result {
+    .wallet {
       margin-top: 15px;
-      font-size: 18px;
-      color: #ffd700;
+      text-align: center;
     }
-    #connect {
-      background: #ff4081;
-      color: #fff;
-      width: 90%;
-      height: 45px;
-      font-size: 16px;
+    .wallet button {
+      background: #0f0;
+      color: #000;
+      font-size: 1em;
+      padding: 12px 20px;
+    }
+    .tx {
+      font-size: 0.9em;
       margin-top: 10px;
-    }
-    #connect:hover {
-      background: #e73370;
+      color: #0f0;
+      word-wrap: break-word;
     }
   </style>
 </head>
 <body>
   <div class="calculator">
-    <h1>Onchain Calculator</h1>
-    <input type="number" id="num1" placeholder="First number"><br>
-    <input type="number" id="num2" placeholder="Second number"><br>
-    <div>
-      <button onclick="calculate('add')">+</button>
-      <button onclick="calculate('subtract')">−</button>
-      <button onclick="calculate('multiply')">×</button>
-      <button onclick="calculate('divide')">÷</button>
+    <div id="display" class="display">0</div>
+    <div class="buttons">
+      <button onclick="append('7')">7</button>
+      <button onclick="append('8')">8</button>
+      <button onclick="append('9')">9</button>
+      <button onclick="append('/')">÷</button>
+      <button onclick="append('4')">4</button>
+      <button onclick="append('5')">5</button>
+      <button onclick="append('6')">6</button>
+      <button onclick="append('*')">×</button>
+      <button onclick="append('1')">1</button>
+      <button onclick="append('2')">2</button>
+      <button onclick="append('3')">3</button>
+      <button onclick="append('-')">−</button>
+      <button onclick="append('0')">0</button>
+      <button onclick="clearDisplay()">C</button>
+      <button onclick="calculate()">=</button>
+      <button onclick="append('+')">+</button>
     </div>
-    <button id="connect" onclick="connectWallet()">Connect Wallet</button>
-    <div id="result">Result: </div>
+    <div class="wallet">
+      <button onclick="connectWallet()">🔗 Connect Wallet</button>
+      <div id="walletStatus"></div>
+      <div class="tx" id="tx"></div>
+    </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
   <script>
+    let expression = "";
     let provider, signer, contract;
-    
+
     const contractAddress = "0x0640761a8AaF04Ef63708789189b8beD47AA338A";
     const abi = [
-      "function add(uint256 a, uint256 b) public payable returns (uint256)",
-      "function subtract(uint256 a, uint256 b) public payable returns (uint256)",
-      "function multiply(uint256 a, uint256 b) public payable returns (uint256)",
-      "function divide(uint256 a, uint256 b) public payable returns (uint256)"
+      {"inputs":[{"internalType":"uint256","name":"a","type":"uint256"},{"internalType":"uint256","name":"b","type":"uint256"},{"internalType":"string","name":"op","type":"string"}],
+      "name":"calculate",
+      "outputs":[{"internalType":"uint256","name":"","type":"uint256"}],
+      "stateMutability":"nonpayable","type":"function"}
     ];
+
+    function append(value) {
+      expression += value;
+      document.getElementById("display").innerText = expression;
+    }
+
+    function clearDisplay() {
+      expression = "";
+      document.getElementById("display").innerText = "0";
+    }
 
     async function connectWallet() {
       if (window.ethereum) {
@@ -102,28 +128,27 @@
         await provider.send("eth_requestAccounts", []);
         signer = provider.getSigner();
         contract = new ethers.Contract(contractAddress, abi, signer);
-        document.getElementById("result").innerText = "Wallet connected!";
+        document.getElementById("walletStatus").innerText = "✅ Wallet Connected";
       } else {
-        alert("Please install MetaMask!");
+        alert("Install MetaMask or Fluent Wallet!");
       }
     }
 
-    async function calculate(operation) {
-      if (!contract) {
-        alert("Please connect wallet first!");
-        return;
-      }
-      const num1 = document.getElementById("num1").value;
-      const num2 = document.getElementById("num2").value;
+    async function calculate() {
       try {
-        const tx = await contract[operation](num1, num2, { value: 0 }); 
-        document.getElementById("result").innerText = "⏳ Waiting for transaction...";
-        const receipt = await tx.wait();
-        const event = receipt.events?.find(e => e.event === null);
-        document.getElementById("result").innerText = `✅ Tx confirmed: ${tx.hash}`;
+        let parts = expression.match(/(\d+)([\+\-\*\/])(\d+)/);
+        if (!parts) return alert("Invalid expression");
+        let a = parts[1];
+        let b = parts[3];
+        let op = parts[2];
+        
+        let tx = await contract.calculate(a, b, op);
+        document.getElementById("tx").innerText = "⏳ Waiting for confirmation...";
+        let receipt = await tx.wait();
+        document.getElementById("tx").innerText = "✅ Tx confirmed: " + receipt.transactionHash;
       } catch (err) {
         console.error(err);
-        document.getElementById("result").innerText = "❌ Error: " + err.message;
+        alert("Error: " + err.message);
       }
     }
   </script>
